[package]
name = "build-pop-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
distinst = { git = "https://github.com/pop-os/distinst",  branch = "pop-container-changes" }
sudo = "0.6.0"
log = "0.4.17"
env_logger = "0.10.0"
users = "0.11.0"
